# Eigen-Alpha

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  api.py  config.py  pipeline.py  pyproject.toml  requirements.txt
data/: __init__.py  loader.py  preprocessor.py  universe.py
docs/: CHANGELOG.md  MATH.md  PIPELINE.md  ROADMAP.md  SOURCES.md
factors/: __init__.py  engine.py  ic_analysis.py
frontend/: next.config.mjs  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/dashboard/: BacktestPage.tsx  FactorAnalysisPage.tsx  LiveMarketPage.tsx  OverviewPage.tsx  PortfolioPage.tsx  Sidebar.tsx
frontend/hooks/: use-api-data.ts
frontend/lib/: api-client.ts  mock-data.ts
notebooks/: 00_eda.ipynb  01_full_pipeline.ipynb
pca/: __init__.py  cluster.py  decompose.py
portfolio/: __init__.py  backtest.py  optimizer.py  tearsheet.py
tests/: __init__.py  test_factors.py  test_loader.py  test_optimizer.py
visualisation/: __init__.py  eda.py  pca_plots.py
